Refactoring and styling

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
 root/.idea/*
+.idea/.name
+.idea/encodings.xml
+.idea/league_of_tilt.iml
+.idea/misc.xml
+.idea/modules.xml
+.idea/workspace.xml
+root/Readme.txt
+root/league_of_tilt.zip
+root/league_of_tilt_v1.zip
+root/league_of_tilt_v2.zip
